feat(allocation): explicar conflictos de eventos unresolved en auto-preview